2023-12-16T08:11:23Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7230764590 # 2178
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-16
* notice: last 14d: unq all: 2 11
* notice: prev accum: outdated-unq outdated-all / unq all: 825 1513 / 831 1523
* notice: next accum: outdated-unq outdated-all / unq all: 825 1513 / 832 1524
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-12-16]

2023-12-16T00:45:11Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7228585208 # 2177
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-16
* notice: last 14d: unq all: 2 10
* notice: prev accum: outdated-unq outdated-all / unq all: 825 1513 / 831 1522
* notice: next accum: outdated-unq outdated-all / unq all: 825 1513 / 831 1523
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-12-15]

2023-12-15T08:13:11Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7219563208 # 2175
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-15
* notice: last 14d: unq all: 2 9
* notice: prev accum: outdated-unq outdated-all / unq all: 825 1513 / 830 1521
* notice: next accum: outdated-unq outdated-all / unq all: 825 1513 / 831 1522
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-12-15]

2023-12-15T00:46:59Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7216418754 # 2174