@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-12-16T08:11:23Z",
+  "timestamp" : "2023-12-17T00:50:25Z",
   "count_outdated" : 1513,
   "uniques_outdated" : 825,
-  "count" : 1524,
+  "count" : 1525,
   "uniques" : 832,
   "clones" : [
     {
@@ -61,9 +61,9 @@
     },
     {
       "timestamp": "2023-12-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
