@@ -1,5 +1,5 @@
 {
-  "count": 11,
+  "count": 12,
   "uniques": 2,
   "clones": [
     {
@@ -34,7 +34,7 @@
     },
     {
       "timestamp": "2023-12-16T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
