@@ -1,3 +1,12 @@
+2023-12-17T00:50:25Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7235284973 # 2180
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-17
+* notice: last 14d: unq all: 2 12
+* notice: prev accum: outdated-unq outdated-all / unq all: 825 1513 / 832 1524
+* notice: next accum: outdated-unq outdated-all / unq all: 825 1513 / 832 1525
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2023-12-16]
+
 2023-12-16T08:11:23Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7230764590 # 2178
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-16
